Rename ids, add inc_toolbar_note_color.xml

--- a/app/src/main/res/layout/activity_help_disappear.xml
+++ b/app/src/main/res/layout/activity_help_disappear.xml
@@ -10,7 +10,7 @@
         android:orientation="vertical">
 
         <include
-            android:id="@+id/toolbar_include"
+            android:id="@+id/toolbar_inc"
             layout="@layout/inc_toolbar_simple" />
 
         <FrameLayout
