--- a/app/src/main/res/layout/fragment_bin.xml
+++ b/app/src/main/res/layout/fragment_bin.xml
@@ -18,7 +18,7 @@
         android:orientation="vertical">
 
         <include
-            android:id="@+id/toolbar_include"
+            android:id="@+id/toolbar_inc"
             layout="@layout/inc_toolbar_simple" />
 
         <FrameLayout
@@ -26,7 +26,7 @@
             android:layout_height="match_parent">
 
             <include
-                android:id="@+id/info_include"
+                android:id="@+id/info_inc"
                 layout="@layout/inc_info"
                 app:details='@{R.string.info_bin_empty_details}'
                 app:icon='@{R.mipmap.img_info_bin}'
