--- a/app/src/main/res/layout/inc_toolbar_note_content.xml
+++ b/app/src/main/res/layout/inc_toolbar_note_content.xml
@@ -22,7 +22,7 @@
     </data>
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar_note_content_container"
+        android:id="@+id/toolbar"
         style="?attr/styleToolbar"
         app:contentInsetEnd="@dimen/layout_8dp"
         app:contentInsetStart="@dimen/layout_8dp"
@@ -30,7 +30,7 @@
         app:popupTheme="?attr/themePopup">
 
         <HorizontalScrollView
-            android:id="@+id/toolbar_note_scroll"
+            android:id="@+id/scroll_view"
             style="@style/Container.ToolbarNote.Scroll"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -42,18 +42,17 @@
                 android:layout_marginEnd="@dimen/layout_24dp">
 
                 <EditText
-                    android:id="@+id/toolbar_note_enter"
+                    android:id="@+id/name_enter"
                     style="@style/EditText.ToolbarNote"
                     android:hint="@string/hint_enter_name"
                     android:importantForAutofill="noExcludeDescendants"
                     android:text='@={item.name}'
                     android:visibility='@{isEditMode ? View.VISIBLE : View.INVISIBLE}'
-                    tools:targetApi="o"
                     tools:visibility="invisible" />
 
                 <!-- Set empty text need for editText may change size -->
                 <TextView
-                    android:id="@+id/toolbar_note_text"
+                    android:id="@+id/name_read"
                     style="@style/Text.ToolbarNote"
                     android:hint="@string/hint_text_name"
                     android:text='@{isEditMode ? "" : item.name}'
