--- a/app/src/main/res/layout/inc_note_panel_roll.xml
+++ b/app/src/main/res/layout/inc_note_panel_roll.xml
@@ -60,7 +60,7 @@
             tools:visibility="visible" />
 
         <include
-            android:id="@+id/panel_inc"
+            android:id="@+id/content"
             layout="@layout/inc_note_panel_content"
             app:inputAccess='@{inputAccess}'
             app:isDataLoad='@{isDataLoad}'
