--- a/app/src/main/res/layout/fragment_notes.xml
+++ b/app/src/main/res/layout/fragment_notes.xml
@@ -18,7 +18,7 @@
         android:orientation="vertical">
 
         <include
-            android:id="@+id/toolbar_inc"
+            android:id="@+id/app_bar"
             layout="@layout/inc_toolbar_simple" />
 
         <FrameLayout
@@ -26,7 +26,7 @@
             android:layout_height="match_parent">
 
             <include
-                android:id="@+id/info_inc"
+                android:id="@+id/empty_info"
                 layout="@layout/inc_info"
                 app:icon='@{R.mipmap.img_info_notes}' />
 
