--- a/app/src/main/res/layout/inc_note_panel_text.xml
+++ b/app/src/main/res/layout/inc_note_panel_text.xml
@@ -51,7 +51,7 @@
             style="@style/Divider.Horizontal" />
 
         <include
-            android:id="@+id/panel_inc"
+            android:id="@+id/content"
             layout="@layout/inc_note_panel_content"
             app:inputAccess='@{inputAccess}'
             app:isDataLoad='@{isDataLoad}'
