--- a/app/src/main/res/layout/fragment_text_note.xml
+++ b/app/src/main/res/layout/fragment_text_note.xml
@@ -40,10 +40,7 @@
 
         <include
             android:id="@+id/app_bar"
-            layout="@layout/inc_toolbar_note"
-            app:isDataLoad='@{isDataLoad}'
-            app:isEditMode='@{isEditMode}'
-            app:item='@{item}' />
+            layout="@layout/inc_toolbar_note" />
 
         <FrameLayout
             android:layout_width="match_parent"
