--- a/app/src/main/res/layout-night/inc_toolbar_note_color.xml
+++ b/app/src/main/res/layout-night/inc_toolbar_note_color.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:showIn="@layout/inc_toolbar_note">
 
-    <merge tools:showIn="@layout/inc_toolbar_note">
+    <merge>
 
         <View
             android:id="@+id/color_view"
