--- a/app/src/main/res/layout/inc_toolbar_note.xml
+++ b/app/src/main/res/layout/inc_toolbar_note.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="@layout/fragment_text_note">
 
@@ -27,10 +26,7 @@
 
         <include
             android:id="@+id/content"
-            layout="@layout/inc_toolbar_note_content"
-            app:isDataLoad="@{isDataLoad}"
-            app:isEditMode="@{isEditMode}"
-            app:item="@{item}" />
+            layout="@layout/inc_toolbar_note_content" />
 
         <include
             android:id="@+id/indicator"
