--- a/app/src/main/res/layout/inc_toolbar_note_content.xml
+++ b/app/src/main/res/layout/inc_toolbar_note_content.xml
@@ -4,23 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="@layout/inc_toolbar_note">
 
-    <data>
-
-        <import type="android.view.View" />
-
-        <variable
-            name="isDataLoad"
-            type="boolean" />
-
-        <variable
-            name="item"
-            type="sgtmelon.scriptum.cleanup.domain.model.item.NoteItem" />
-
-        <variable
-            name="isEditMode"
-            type="boolean" />
-    </data>
-
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         style="?attr/styleToolbar"
@@ -33,8 +16,7 @@
             android:id="@+id/scroll_view"
             style="@style/Container.ToolbarNote.Scroll"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility='@{isDataLoad ? View.VISIBLE : View.INVISIBLE}'>
+            android:layout_height="wrap_content">
 
             <FrameLayout
                 android:layout_width="wrap_content"
@@ -46,17 +28,12 @@
                     style="@style/EditText.ToolbarNote"
                     android:hint="@string/hint_enter_name"
                     android:importantForAutofill="noExcludeDescendants"
-                    android:text='@={item.name}'
-                    android:visibility='@{isEditMode ? View.VISIBLE : View.INVISIBLE}'
                     tools:visibility="invisible" />
 
-                <!-- Set empty text need for editText may change size -->
                 <TextView
                     android:id="@+id/name_read"
                     style="@style/Text.ToolbarNote"
                     android:hint="@string/hint_text_name"
-                    android:text='@{isEditMode ? "" : item.name}'
-                    android:visibility='@{!isEditMode ? View.VISIBLE : View.INVISIBLE}'
                     tools:text="@string/preview_note_name" />
 
             </FrameLayout>
