--- a/app/src/main/res/layout/fragment_text_note.xml
+++ b/app/src/main/res/layout/fragment_text_note.xml
@@ -29,7 +29,7 @@
 
         <variable
             name="inputAccess"
-            type="sgtmelon.scriptum.cleanup.presentation.control.note.input.InputControl.Access" />
+            type="sgtmelon.scriptum.cleanup.presentation.control.note.input.NoteHistory.Access" />
     </data>
 
     <LinearLayout
