--- a/app/src/main/res/layout/inc_note_panel_text.xml
+++ b/app/src/main/res/layout/inc_note_panel_text.xml
@@ -36,7 +36,7 @@
 
         <variable
             name="inputAccess"
-            type="sgtmelon.scriptum.cleanup.presentation.control.note.input.InputControl.Access" />
+            type="sgtmelon.scriptum.cleanup.presentation.control.note.input.NoteHistory.Access" />
     </data>
 
     <LinearLayout
