--- a/app/src/main/res/layout/inc_note_panel_content.xml
+++ b/app/src/main/res/layout/inc_note_panel_content.xml
@@ -35,7 +35,7 @@
 
         <variable
             name="inputAccess"
-            type="sgtmelon.scriptum.cleanup.presentation.control.note.input.NoteHistory.Access" />
+            type="sgtmelon.scriptum.cleanup.presentation.control.note.input.NoteHistoryImpl.Access" />
     </data>
 
     <FrameLayout
