Rename InputItem.kt -> HistoryItem.kt

--- a/app/src/main/res/layout/inc_note_panel_text.xml
+++ b/app/src/main/res/layout/inc_note_panel_text.xml
@@ -36,7 +36,7 @@
 
         <variable
             name="inputAccess"
-            type="sgtmelon.scriptum.cleanup.presentation.control.note.input.NoteHistoryImpl.Access" />
+            type="sgtmelon.scriptum.data.noteHistory.NoteHistoryImpl.Access" />
     </data>
 
     <LinearLayout
