Finish refactor of RollWriteHolder.kt

--- a/app/src/main/res/layout/item_roll_write.xml
+++ b/app/src/main/res/layout/item_roll_write.xml
@@ -3,18 +3,6 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
-        <import type="sgtmelon.scriptum.R"/>
-
-        <variable name="item" type="sgtmelon.scriptum.cleanup.domain.model.item.RollItem"/>
-
-        <!--
-            Use when user change roll text need update contentDescription without
-            calling onTextChanged in EditText.
-        -->
-        <variable name="descText" type="String"/>
-    </data>
-
     <androidx.cardview.widget.CardView
         android:id="@+id/parent_container"
         style="@style/Card.Item.Common">
@@ -33,14 +21,12 @@
                     android:id="@+id/check_box"
                     style="@style/Button.Roll.Write" />
 
+                <!--  ContentDescription setup manually  -->
                 <ImageButton
                     android:id="@+id/drag_button"
                     style="@style/Container.Roll.Click"
-                    android:contentDescription='@{@string/description_item_roll_move + " " + descText}'
-                    app:boolExpression='@{item.check}'
-                    app:falseColor='@{R.attr.clContent}'
                     app:srcCompat="@drawable/ic_move"
-                    app:trueColor='@{R.attr.clAccent}'
+                    tools:ignore="ContentDescription"
                     tools:tint="?attr/clAccent" />
 
             </FrameLayout>
@@ -52,10 +38,7 @@
                 android:imeOptions="flagNoFullscreen"
                 android:importantForAutofill="noExcludeDescendants"
                 android:inputType="textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine"
-                android:text='@{item.text}'
-                app:boolExpression='@{!item.check}'
-                app:falseColor='@{R.attr.clContrast}'
-                app:trueColor='@{R.attr.clContent}'
+                tools:textColor="?attr/clContrast"
                 tools:text="@string/preview_note_roll" />
 
         </LinearLayout>
