--- a/app/src/main/res/layout/inc_note_panel_content.xml
+++ b/app/src/main/res/layout/inc_note_panel_content.xml
@@ -121,7 +121,7 @@
                 app:enabled='@{!isRankEmpty}'
                 app:falseColor='@{R.attr.clDisable}'
                 app:srcCompat="@drawable/ic_rank"
-                app:trueColor='@{item.haveRank() ? R.attr.clAccent : R.attr.clContent}'
+                app:trueColor="@{item.haveRankDepr() ? R.attr.clAccent : R.attr.clContent}"
                 tools:tint="?attr/clAccent" />
 
             <ImageButton
@@ -161,7 +161,7 @@
                 style="@style/Button.Small"
                 android:contentDescription="@string/description_note_notification"
                 android:onClick='@{() -> menuCallback.onMenuNotification()}'
-                app:boolExpression='@{item.haveAlarm()}'
+                app:boolExpression="@{item.haveAlarmDepr()}"
                 app:falseColor='@{R.attr.clContent}'
                 app:srcCompat="@drawable/ic_notifications"
                 app:trueColor='@{R.attr.clAccent}'
@@ -172,7 +172,7 @@
                 style="@style/Button.Small"
                 android:contentDescription='@{item.status ? @string/description_note_unbind : @string/description_note_bind}'
                 android:onClick='@{() -> menuCallback.onMenuBind()}'
-                android:src='@{item.type == Type.TEXT ? @drawable/ic_bind_text : @drawable/ic_bind_roll}'
+                android:src="@{item.typeDepr == Type.TEXT ? @drawable/ic_bind_text : @drawable/ic_bind_roll}"
                 app:boolExpression='@{item.status}'
                 app:falseColor='@{R.attr.clContent}'
                 app:trueColor='@{R.attr.clAccent}'
@@ -182,7 +182,7 @@
             <ImageButton
                 android:id="@+id/convert_button"
                 style="@style/Button.Small"
-                android:contentDescription='@{item.type == Type.TEXT ? @string/description_note_convert_text : @string/description_note_convert_roll}'
+                android:contentDescription="@{item.typeDepr == Type.TEXT ? @string/description_note_convert_text : @string/description_note_convert_roll}"
                 android:onClick='@{() -> menuCallback.onMenuConvert()}'
                 app:tint="?attr/clContent"
                 app:srcCompat="@drawable/ic_convert" />
