--- a/app/src/main/res/layout/inc_note_text_info.xml
+++ b/app/src/main/res/layout/inc_note_text_info.xml
@@ -30,14 +30,14 @@
             android:orientation="horizontal"
             android:gravity="center"
             android:showDividers="middle"
-            android:visibility='@{item.haveAlarm() || item.status || item.haveRank() ? View.VISIBLE : View.GONE}'
+            android:visibility="@{item.haveAlarmDepr() || item.status || item.haveRankDepr() ? View.VISIBLE : View.GONE}"
             tools:visibility="visible">
 
             <ImageView
                 android:id="@+id/note_info_notification_image"
                 style="@style/Image.Note.Info"
                 android:importantForAccessibility="no"
-                android:visibility='@{item.haveAlarm() ? View.VISIBLE : View.GONE }'
+                android:visibility="@{item.haveAlarmDepr() ? View.VISIBLE : View.GONE }"
                 app:srcCompat="@drawable/ic_notifications"
                 tools:visibility="visible" />
 
@@ -53,7 +53,7 @@
                 android:id="@+id/note_info_rank_image"
                 style="@style/Image.Note.Info"
                 android:importantForAccessibility="no"
-                android:visibility='@{item.haveRank() ? View.VISIBLE : View.GONE}'
+                android:visibility="@{item.haveRankDepr() ? View.VISIBLE : View.GONE}"
                 app:srcCompat="@drawable/ic_rank"
                 tools:visibility="visible" />
 
