--- a/app/src/main/res/layout/inc_note_panel_content.xml
+++ b/app/src/main/res/layout/inc_note_panel_content.xml
@@ -121,7 +121,7 @@
                 app:enabled='@{!isRankEmpty}'
                 app:falseColor='@{R.attr.clDisable}'
                 app:srcCompat="@drawable/ic_rank"
-                app:trueColor="@{item.haveRankDepr() ? R.attr.clAccent : R.attr.clContent}"
+                app:trueColor="@{item.haveRankDepr ? R.attr.clAccent : R.attr.clContent}"
                 tools:tint="?attr/clAccent" />
 
             <ImageButton
@@ -144,7 +144,7 @@
                 android:onClick='@{() -> menuCallback.onMenuSave(true)}'
                 android:onLongClick='@{() -> menuCallback.onMenuSave(false)}'
                 android:text="@string/button_note_save"
-                app:enabled='@{item.isSaveEnabled()}' />
+                app:enabled="@{item.isSaveEnabledDepr}" />
 
         </LinearLayout>
 
@@ -161,7 +161,7 @@
                 style="@style/Button.Small"
                 android:contentDescription="@string/description_note_notification"
                 android:onClick='@{() -> menuCallback.onMenuNotification()}'
-                app:boolExpression="@{item.haveAlarmDepr()}"
+                app:boolExpression="@{item.haveAlarmDepr}"
                 app:falseColor='@{R.attr.clContent}'
                 app:srcCompat="@drawable/ic_notifications"
                 app:trueColor='@{R.attr.clAccent}'
