Start create setup for note panel in ParentNoteFragmentImpl.kt

--- a/app/src/main/res/layout/fragment_roll_note.xml
+++ b/app/src/main/res/layout/fragment_roll_note.xml
@@ -10,10 +10,6 @@
         <import type="android.view.View" />
 
         <variable
-            name="menuCallback"
-            type="sgtmelon.scriptum.infrastructure.screen.note.NoteMenu" />
-
-        <variable
             name="isDataLoad"
             type="boolean" />
 
@@ -105,8 +101,7 @@
             app:isDividerHide='@{!isEditMode}'
             app:isEditMode='@{isEditMode}'
             app:isRankEmpty='@{isRankEmpty}'
-            app:item='@{item}'
-            app:menuCallback='@{menuCallback}' />
+            app:item='@{item}' />
 
     </LinearLayout>
 
