--- a/app/src/main/res/layout/inc_note_panel_text.xml
+++ b/app/src/main/res/layout/inc_note_panel_text.xml
@@ -15,10 +15,6 @@
             type="sgtmelon.scriptum.infrastructure.model.key.preference.NoteType" />
 
         <variable
-            name="menuCallback"
-            type="sgtmelon.scriptum.infrastructure.screen.note.NoteMenu" />
-
-        <variable
             name="isDataLoad"
             type="boolean" />
 
@@ -57,8 +53,7 @@
             app:isDataLoad='@{isDataLoad}'
             app:isEditMode='@{isEditMode}'
             app:isRankEmpty='@{isRankEmpty}'
-            app:item='@{item}'
-            app:menuCallback='@{menuCallback}' />
+            app:item='@{item}' />
 
     </LinearLayout>
 
