--- a/app/src/main/res/layout/inc_note_panel_roll.xml
+++ b/app/src/main/res/layout/inc_note_panel_roll.xml
@@ -19,10 +19,6 @@
             type="boolean" />
 
         <variable
-            name="menuCallback"
-            type="sgtmelon.scriptum.infrastructure.screen.note.NoteMenu" />
-
-        <variable
             name="isDataLoad"
             type="boolean" />
 
@@ -66,8 +62,7 @@
             app:isDataLoad='@{isDataLoad}'
             app:isEditMode='@{isEditMode}'
             app:isRankEmpty='@{isRankEmpty}'
-            app:item='@{item}'
-            app:menuCallback='@{menuCallback}' />
+            app:item='@{item}' />
 
     </LinearLayout>
 
